GBL-3139 / TSK-4605 -- Заявление на отзыв МЧД

--- a/modules/BackOffice-ObjectModel-Powers/pages/PowerOfAttorneyMainInfo_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Powers/pages/PowerOfAttorneyMainInfo_CL.adoc
@@ -35,6 +35,8 @@ public sealed class PowerOfAttorneyMainInfo : BaseCardSectionRow
 |`RevocationDate` |Дата отзыва.
 |`xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyRegTransferStatuses_EN.adoc[RegTransferStatus]` |Статус передачи в реестр.
 |`xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyRepresentative_CL.adoc[Representative]` |Представитель.
+|`RevocationApplication` |Заявление на отзыв доверенности
+|`RevocationApplicationSignature` |Подпись заявления на отзыв доверенности
 |===
 
 == Поля
@@ -60,4 +62,6 @@ public sealed class PowerOfAttorneyMainInfo : BaseCardSectionRow
 |`RevocationDateProperty` |Определяет свойство "Дата отзыва".
 |`RegTransferStatusProperty` |Определяет свойство "Статус передачи в реестр".
 |`RepresentativeProperty` |Определяет свойство "Представитель".
+|`RevocationApplicationProperty` |Определяет свойство "Заявление на отзыв доверенности"
+|`RevocationApplicationSignatureProperty` |Определяет свойство "Подпись заявления на отзыв доверенности"
 |===
