--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/Entities_NS.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/Entities_NS.adoc
@@ -73,7 +73,11 @@
 |`xref:Entities/PowerOfAttorneyFNSDOVELData_CL.adoc[PowerOfAttorneyFNSDOVELDat]` |
 |`xref:Entities/PowerOfAttorneyMachineReadableInfo_CL.adoc[PowerOfAttorneyMachineReadableInfo]` |Содержит информацию о МЧД.
 |`RoleModelAccessChecker` |Предоставляет методы проверки доступа в ролевой модели.
-|`xref:Entities/PowerOfAttorneyVerification_CL.adoc[PowerOfAttorneyVerification]` |Содержит результат проверки действительности доверенности
+|`xref:Entities/PowerOfAttorneyVerification_CL.adoc[PowerOfAttorneyVerification]` |Содержит результат проверки действительности доверенности.
+|`xref:Entities/ImportESNSIResults_CL.adoc[ImportESNSIResults]`
+|Результат импорта полномочий из ЕСНИИ.
+|`xref:Entities/IPowersService_IN.adoc[IPowersService]`
+|Сервис справочника полномочий.
 |`ServerConnectionInfo` |Параметры соединения с сервером.
 |`xref:Entities/StartBusinessProcessErrorInfo_CL.adoc[StartBusinessProcessErrorInfo]` |Представляет содержимое ошибки запуска бизнес-процесса.
 |`xref:Entities/TaskStopExecutionInfo_CL.adoc[TaskStopExecutionInfo]` |Представляет содержимое ошибки остановки исполнения задания.
