--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyMachineReadableInfo_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyMachineReadableInfo_CL.adoc
@@ -43,7 +43,8 @@ List<string>)` |Создаёт новый экземпляр класса
 |`Principal` |Доверитель
 |`PowerOfAttorneyMachineReadableFileID` |Идентификатор файла МЧД
 |`PowerOfAttorneyMachineReadableFileEncoding` |Кодировка файла МЧД
-|`Snils` |Снилсы представителей
+|`RepresentativesSnils` |СНИЛСы представителей
+|`PrincipalsSnils` |СНИЛСы доверителей
 |`Representative` |Строковое представление представителя в формате ФИО (или ФИ) - для физлица, или названия организации - для юридического лица
 |`Signer` |Строковое представление подписанта в формате ФИО (или ФИ)
 |`RepresentativePowers` |Полномочия представителя
