--- a/modules/Platform-ObjectModel/pages/ObjectModel_NS.adoc
+++ b/modules/Platform-ObjectModel/pages/ObjectModel_NS.adoc
@@ -37,6 +37,12 @@
 |Представляет секцию "Представитель" системной карточки доверенности.
 |`xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyRepresentativesPowers_CL.adoc[PowerOfAttorneyRepresentativesPowers]`
 |Представляет секцию "Полномочия" системной карточки доверенности.
+|`xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyRevocationApplicantInfo_CL.adoc[PowerOfAttorneyRevocationApplicantInfo]`
+|Информация о лице, отзывающем доверенность.
+|`xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyRevocationData_CL.adoc[PowerOfAttorneyRevocationData]`
+|Данные отзыва доверенности.
+|`xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyRevocationInfo_CL.adoc[PowerOfAttorneyRevocationInfo]`
+|Содержит информацию об отзыве доверенности.
 |`xref:BackOffice-ObjectModel-Powers:PowerOfAttorneySubsidiaryPowersOfAttorney_CL.adoc[PowerOfAttorneySubsidiaryPowersOfAttorney]`
 |Представляет cекции "Системные карточки" дочерних доверенностей.
 |`xref:BackOffice-ObjectModel-Powers:Powers_CL.adoc[Powers]`
@@ -74,4 +80,9 @@
 |`xref:ObjectLockStatus_EN.adoc[ObjectLockStatus]` |Определяет статус блокировки объекта.
 |`xref:ObjectPropertyOptions_EN.adoc[ObjectPropertyOptions]` |Определяет список флагов, используемых свойствами объектной модели.
 |`xref:ObjectStateFlags_EN.adoc[ObjectStateFlags]` |Определяет состояние объекта.
+|`xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyRegTransferStatuses_EN.adoc[PowerOfAttorneyRegTransferStatuses]` |Статус передачи доверенности в распределённый реестр ФНС.
+|`xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyRetrustType_EN.adoc[PowerOfAttorneyRetrustType]` |Признак возможности оформления передоверия.
+
+|`xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyRevocationApplicantType_EN.adoc[PowerOfAttorneyRevocationApplicantType]` |Тип заявителя отзыва доверенности.
+|`xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyRevocationType_EN.adoc[PowerOfAttorneyRevocationType]` |Тип заявления на отзыв.
 |===
