--- a/modules/ROOT/partials/bo-om-services-powers.adoc
+++ b/modules/ROOT/partials/bo-om-services-powers.adoc
@@ -4,6 +4,11 @@
 ****** xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyRepresentative_CL.adoc[]
 ****** xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyRepresentativesPowers_CL.adoc[]
 ****** xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyRetrustType_EN.adoc[]
+****** xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyRevocationApplicantInfo_CL.adoc[]
+****** xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyRevocationApplicantType_EN.adoc[]
+****** xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyRevocationData_CL.adoc[]
+****** xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyRevocationInfo_CL.adoc[]
+****** xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyRevocationType_EN.adoc[]
 ****** xref:BackOffice-ObjectModel-Powers:PowerOfAttorneySignatureFormat_EN.adoc[]
 ****** xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyStatus_EN.adoc[]
 ****** xref:BackOffice-ObjectModel-Powers:PowerOfAttorneySubsidiaryPowersOfAttorney_CL.adoc[]
