GBL-3070 / TSK-4622 -- один уровень навигации потерялся

--- a/modules/ROOT/partials/bo-om-services-entities.adoc
+++ b/modules/ROOT/partials/bo-om-services-entities.adoc
@@ -33,7 +33,7 @@
 ******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.IndividualInfo_CL.adoc[]
 ******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.IndividualPrincipalInfo1_CL.adoc[]
 ******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.IndividualPrincipalInfo_CL.adoc[]
-******* xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.IdentityCardOfIndividual_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.IdentityCardOfIndividual_CL.adoc[]
 ******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.IrrevocablePowerOfAttorneyInfo_CL.adoc[]
 ******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.LegalEntityInfo_CL.adoc[]
 ******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.MachineReadablePowerRestrictions_CL.adoc[]
