GBL-3146 / TSK-4539 -- изменения в схеме "Список подписей" для МЧД контрагентов и сопутствующие поля и свойства

--- a/modules/BackOffice-ObjectModel-BaseCard/pages/BaseCardSignature_CL.adoc
+++ b/modules/BackOffice-ObjectModel-BaseCard/pages/BaseCardSignature_CL.adoc
@@ -17,18 +17,22 @@ public class BaseCardSignature : BaseCardSectionRow
 [cols=",",options="header"]
 |===
 |Имя |Описание
-|`Certificate` |Задаёт или возвращает отпечаток сертификата.
-|`Imported` |Возвращает `true` в случае, если тип подписи эквивалентен значению `BaseCardSignature.ImportedSignatureType`.
-|`Label` |Задаёт или возвращает метку подписи (согласовано, не согласовано).
-|`Operation` |Задаёт или возвращает подписываемую операцию.
-|`Parts` |Возвращает коллекцию частей подписи.
 |`SignatureType` |Задаёт или возвращает идентификатор типа подписи.
-|`SignedFrom` |Задаёт или возвращает сотрудника за которого была поставлена подпись, в случае подписания от имени другого сотрудника.
-|`SignedFromConfirmation` |Задаёт или возвращает текст подтверждения.
 |`Signer` |Задаёт или возвращает сотрудника непосредственно поставившего подпись.
 |`State` |Задаёт или возвращает подписываемый статус.
 |`TimeStamp` |Задаёт или возвращает время установки подписи.
-|`ExternalPowerOfAttorney` |Позволяет установить и прочитать стороннюю МЧД
+|`Certificate` |Задаёт или возвращает отпечаток сертификата.
+|`Operation` |Задаёт или возвращает подписываемую операцию.
+|`Imported` |Возвращает `true` в случае, если тип подписи эквивалентен значению `BaseCardSignature.ImportedSignatureType`.
+|`Label` |Задаёт или возвращает метку подписи (согласовано, не согласовано).
+|`PowerOfAttorneyID` |Идентификатор МЧД.
+|`SignedFromConfirmation` |Задаёт или возвращает текст подтверждения.
+|`SignedFrom` |Задаёт или возвращает сотрудника за которого была поставлена подпись, в случае подписания от имени другого сотрудника.
+|`Parts` |Возвращает коллекцию частей подписи.
+|`Version` |Получает или устанавливает версию подписи.
+|`ExternalPowerOfAttorney` |Сторонняя доверенность.
+|`SupportOrderedAttachments` |Отображает, поддерживает ли подпись упорядоченные приложения для простой подписи.
+|`SupportOrderedAttachmentsForAnySignature` |Отображает, поддерживает ли подпись упорядоченные приложения для любой подписи.
 |===
 
 == Поля
@@ -36,14 +40,19 @@ public class BaseCardSignature : BaseCardSectionRow
 [cols=",",options="header"]
 |===
 |Имя |Описание
-|`CertificateProperty` |Описывает свойство "Сертификат".
-|`LabelProperty` |Описывает свойство "Метка".
-|`OperationProperty` |Описывает свойство "Операция".
-|`PartsProperty` |Описывает свойство "Части подписи".
 |`SignatureTypeProperty` |Описывает свойство "Тип подписи".
-|`SignedFromConfirmationProperty` |Описывает свойство "Текст подтверждения".
-|`SignedFromProperty` |Описывает свойство "Подписано от имени".
 |`SignerProperty` |Описывает свойство "Подписант".
 |`StateProperty` |Описывает свойство "Состояние".
 |`TimeStampProperty` |Описывает свойство "Время нанесения".
+|`CertificateProperty` |Описывает свойство "Сертификат".
+|`OperationProperty` |Описывает свойство "Операция".
+|`LabelProperty` |Описывает свойство "Метка".
+|`PowerOfAttorneyIDProperty` |Описывает свойство "Идентификатор МЧД".
+|`SignedFromProperty` |Описывает свойство "Подписано от имени".
+|`SignedFromConfirmationProperty` |Описывает свойство "Текст подтверждения".
+|`PartsProperty` |Описывает свойство "Части подписи".
+|`VersionProperty` |Описывает версию подписи.
+|`ExternalPowerOfAttorneyProperty` |Описывает свойство "Сторонняя доверенность".
+|`SupportOrderedAttachmentsProperty` |Описывает свойство "Поддержка упорядоченных приложений для простой подписи".
+|`SupportOrderedAttachmentsForAnySignatureProperty` |Описывает свойство "Поддержка упорядоченных приложений для любой подписи".
 |===
