ERR-5300 -- Lync и Skype For Business не поддерживаются

--- a/modules/appendix/pages/controls/docsvision/CommunicatorControl.adoc
+++ b/modules/appendix/pages/controls/docsvision/CommunicatorControl.adoc
@@ -1,5 +1,7 @@
 = Элемент управления "CommunicatorControl"
 
+WARNING: В текущей версии системы интеграция с {ms} Lync и Skype For Business не поддерживается.
+
 Элемент управления `_CommunicatorControl_` отображает статус доступности сотрудника в Microsoft Lync. Является частью элемента управления `_xref:appendix:controls/docsvision/CommunicativeChooseBox.adoc[CommunicativeChooseBox]_`, но может быть использован отдельно. Не имеет аналога в _Конструкторе разметок_.
 
 .`_CommunicatorControl_` содержит единственную функциональную кнопку:
