--- a/modules/solutions/pages/cards/card-component/controls.adoc
+++ b/modules/solutions/pages/cards/card-component/controls.adoc
@@ -49,6 +49,9 @@
 ** `RowChooseBox` -- элемент управления для выбора строки справочника, аналогичен `RowChooseBox` из `DocsVision.Platform.WinForms`.
 ** `RowMultiChooseBox` -- элемент для выбора нескольких значений.
 ** `CommunicativeChooseBox` -- элемент для выбора сотрудника с возможностью интеграции с Microsoft Office Communicator/Lync.
++
+WARNING: В текущей версии системы интеграция с {ms} Lync и Skype For Business не поддерживается.
++
 ** `CommunicativeMultiChooseBox` -- элемент для выбора нескольких сотрудников.
 ** `UniversalDirectoryChooseBox` -- элемент для выбора значения из Конструктора справочников.
 +
@@ -67,6 +70,9 @@
 * *Вспомогательные*:
 +
 ** `CommunicatorControl` -- элемент управления, отображающий статус пользователя в Microsoft Office Communicator/Lync, позволяющий осуществить сеанс связи с пользователем (звонок, отправка мгновенного сообщения, отправка электронной почты). Используется в `CommunicativeChooseBox` и `CommunicativeMultiChooseBox`.
++
+WARNING: В текущей версии системы интеграция с {ms} Lync и Skype For Business не поддерживается.
++
 ** `Preview` -- элемент просмотра содержимого файла. Используются средства предпросмотра, установленные в операционной системе (аналогично Microsoft Outlook).
 
 [WARNING]
