версии с @ и ЕСНИИ > ЕСНСИ

--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/Entities_NS.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/Entities_NS.adoc
@@ -75,7 +75,7 @@
 |`RoleModelAccessChecker` |Предоставляет методы проверки доступа в ролевой модели.
 |`xref:Entities/PowerOfAttorneyVerification_CL.adoc[PowerOfAttorneyVerification]` |Содержит результат проверки действительности доверенности.
 |`xref:Entities/ImportESNSIResults_CL.adoc[ImportESNSIResults]`
-|Результат импорта полномочий из ЕСНИИ.
+|Результат импорта полномочий из ЕСНСИ.
 |`xref:Entities/IPowersService_IN.adoc[IPowersService]`
 |Сервис справочника полномочий.
 |`ServerConnectionInfo` |Параметры соединения с сервером.
