--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/IPowersService_IN.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/IPowersService_IN.adoc
@@ -19,9 +19,9 @@ public interface IPowersService
 |Имя |Описание
 
 |`ImportESNSIPowers`
-|Импорт полномочий из ЕСНИИ
+|Импорт полномочий из ЕСНСИ
 
 |`ImportESNSIPowers`
-|Импорт полномочий из ЕСНИИ
+|Импорт полномочий из ЕСНСИ
 
 |===
