--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/ImportESNSIResults_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/ImportESNSIResults_CL.adoc
@@ -1,6 +1,6 @@
 = ImportESNSIResults -- класс
 
-Результат импорта полномочий из ЕСНИИ
+Результат импорта полномочий из ЕСНСИ
 
 * *Пространство имён:* `xref:Entities/Entities_NS.adoc[DocsVision.BackOffice.ObjectModel.Services.Entities]`
 * *Сборка:* `DocsVision.BackOffice.ObjectModel.dll`
@@ -25,7 +25,7 @@ public class ImportESNSIResults
 |Ничего не загружено
 
 |`NotFoundGroups`
-|Список идентификаторов ЕСНИИ групп, которые не были найдены в справочнике
+|Список идентификаторов ЕСНСИ групп, которые не были найдены в справочнике
 
 |`UpdatedGroups`
 |Группы с обновлёнными кодами полномочий
