--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -73,7 +73,7 @@
 ** `xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVELData_CL.adoc[PowerOfAttorneyFNSDOVELDat]` --
 ** `xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyMachineReadableInfo_CL.adoc[PowerOfAttorneyMachineReadableInfo]` -- Содержит информацию о МЧД.
 ** `xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyVerification_CL.adoc[PowerOfAttorneyVerification]` -- Содержит результат проверки действительности доверенности
-** `xref:BackOffice-ObjectModel-Services-Entities:Entities/ImportESNSIResults_CL.adoc[ImportESNSIResults]` -- Результат импорта полномочий из ЕСНИИ.
+** `xref:BackOffice-ObjectModel-Services-Entities:Entities/ImportESNSIResults_CL.adoc[ImportESNSIResults]` -- Результат импорта полномочий из ЕСНСИ.
 +
 . Добавлены новые перечисления::
 +
