ERR-5337 -- ещё раз про синхронизацию свойств карточки и файла
(cherry picked from commit dc6b029493ab7abba25214bb26decef70bad5b05)

--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/DocumentPropertyDirection_EN.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/DocumentPropertyDirection_EN.adoc
@@ -26,6 +26,6 @@ public enum DocumentPropertyDirection
 |`Both` |В обе стороны. Значение `0x03`.
 |===
 
-== Заметки
-
-Для документов в формате Microsoft Office в системе {dv} имеется ряд дополнительных возможностей. В частности, при вложении файлов формата Microsoft Office в карточку Документ пользовательского вида, допускается копирование свойств файла в карточку и свойств карточки в файл. Данная операция в рамках системы {dv} называется Синхронизация свойств полей.
+// == Заметки
+//
+// Для документов в формате Microsoft Office в системе {dv} имеется ряд дополнительных возможностей. В частности, при вложении файлов формата Microsoft Office в карточку Документ пользовательского вида, допускается копирование свойств файла в карточку и свойств карточки в файл. Данная операция в рамках системы {dv} называется Синхронизация свойств полей.
